Cleaning up and refactoring Swagger and Resources
